--- a/_posts/插画展示.markdown
+++ b/_posts/插画展示.markdown
@@ -1,11 +1,11 @@
 ---
-title: Escape
-subtitle: Website Design
+title: 插画展示
+subtitle: 个人爱好
 layout: default
-modal-id: 2
-date: 2014-07-17
-img: escape.png
-thumbnail: escape-thumbnail.png
+modal-id: 5
+date: 2014-07-14
+img: startup-framework.png
+thumbnail: startup-framework-thumbnail.png
 alt: image-alt
 project-date: April 2014
 client: Start Bootstrap
