--- a/_posts/音乐分享.markdown
+++ b/_posts/音乐分享.markdown
@@ -1,11 +1,11 @@
 ---
-title: Golden
-subtitle: Website Design
+title: 音乐分享
+subtitle: 这些年喜欢的歌
 layout: default
-modal-id: 3
-date: 2014-07-16
-img: golden.png
-thumbnail: golden-thumbnail.png
+modal-id: 1
+date: 2014-07-18
+img: dreams.png
+thumbnail: dreams-thumbnail.png
 alt: image-alt
 project-date: April 2014
 client: Start Bootstrap
